ingress.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - image: nginx:1.25.3-bookworm
    name: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  dnsConfig:
    nameservers:
      - 8.8.8.8
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - image: traefik/whoami:v1.10.1
    name: foo-app
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
  - port: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
  - image: traefik/whoami:v1.10.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    name: bar-app
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        # path: /foo(/|$)(.*)
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 80
      - pathType: Prefix
        # path: /bar(/|$)(.*)
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 80
