networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ing-http-port
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: curl
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egr-http-curl
spec:
  policyTypes:
  - Egress
  podSelector: 
    matchLabels:
      app: curl
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app
      ports:
        - protocol: TCP
          port: 80
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny-egress
# spec:
#   policyTypes:
#   - Egress
#   podSelector: {}
#   egress:
#     - to:
#         - ipBlock:
#             cidr: 192.168.0.0/16
#       ports:
#         - protocol: TCP
#           port: 5978
